--- a/styles.css
+++ b/styles.css
@@ -71,10 +71,10 @@ h2 {
 .container {
   font-size: 1rem;
   font-weight: 500;
-  max-width: 56.25rem;
+  max-width: 50vw;
   margin: 11.25rem auto;
   padding: 3.125rem;
-  background-color: white;
+  background-color: #fff;
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.06);
 
   display: flex;
@@ -96,6 +96,7 @@ h2 {
 
 .description {
   margin: 1.5rem 0 1.75rem;
+  font-size: 1.125rem;
 }
 
 /* PREPARATION SECTION */
